sweet: RRO: Define OEM fast charge sysfs node
 * this forces android to display "charging rapidly" whenever our
   proprietary 33w charger is connected, based on the value of
   this node (0/1)

Change-Id: Ide55b25613ee1c1cb7993cb1d211ddfcd124956d

--- a/rro_overlays/frameworks/res/values/config.xml
+++ b/rro_overlays/frameworks/res/values/config.xml
@@ -843,4 +843,7 @@
     <!-- True if the display hardware only has brightness buckets rather than a full range of
          backlight values -->
     <bool name="config_displayBrightnessBucketsInDoze">true</bool>
+
+    <!-- Path to fast charging status file to detect whether an oem fast charger is active -->
+    <string name="config_oemFastChargerStatusPath" translatable="false">/sys/class/power_supply/bms/fastcharge_mode</string>
 </resources>
