sweet: enable charging ripple
Signed-off-by: Ali Hasan <ahb7671@gmail.com>
Change-Id: Ia5e4ee76350e7ec9819ca20c0313c20bc7ea6bcf

--- a/rro_overlays/SystemUI/res/values/overlays.xml
+++ b/rro_overlays/SystemUI/res/values/overlays.xml
@@ -78,4 +78,7 @@
         <item>0</item>
         <item>0</item>
     </integer-array>
+
+    <!-- Charging ripple -->
+    <bool name="flag_charging_ripple">true</bool>
 </resources>
