--- a/rro_overlays/SystemUI/res/values/overlays.xml
+++ b/rro_overlays/SystemUI/res/values/overlays.xml
@@ -78,4 +78,7 @@
         <item>0</item>
         <item>0</item>
     </integer-array>
+
+    <!-- Whether usage of the proximity sensor during doze is supported -->
+    <bool name="doze_proximity_sensor_supported">false</bool>
 </resources>
